--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pyyaml = "^6.0.2"
+types-pyyaml = "^6.0.12.20250402"
 
 
 [build-system]
